--- a/fork-off-linux-bfq-mq-git/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/linux-bfq-mq-git/PKGBUILD
@@ -426,7 +426,7 @@ _package-headers() {
         rm -r "${_arch}"
     done
 
-    # remove files already in linux-bfq-sq-mq-haswell-docs package
+    # remove files already in linux-bfq-mq-git-docs package
     rm -r "${_builddir}/Documentation"
     
     # remove now broken symlinks
