--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -83,7 +83,7 @@ _bfq_mq_ver='20180410'
 _bfq_mq_patch="4.16-bfq-sq-mq-git-${_bfq_mq_ver}.patch"
 
 source=(# mainline kernel
-        "git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git#branch=${_gitver}.y"
+        "git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git#branch=linux-4.16.y"
         # gcc cpu optimizatons from graysky and ck; forked by sir_lucjan
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         # bfq-mq patch
