--- a/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell/PKGBUILD
@@ -75,9 +75,10 @@ _1k_HZ_ticks=y
 
 pkgbase=linux-bfq-sq-mq-haswell
 # pkgname=('linux-bfq-sq-mq-haswell-kernel' 'linux-bfq-sq-mq-haswell-headers' 'linux-bfq-sq-mq-haswell-docs')
+_major=4.17
 _rcver=rc3
-_srcname=linux-v4.17-${_rcver}
-pkgver=4.17${_rcver}
+_srcname=linux-v${_major}-${_rcver}
+pkgver=${_major}${_rcver}
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
