--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -88,7 +88,7 @@ prepare() {
   _abiname="$(cat ${srcdir}/${_lqxpatchname}/linux-liquorix/debian/config/defines | grep 'abiname:' | sed -r 's/abiname:\s*//')"
   _minor="$(echo "$_abiname" | cut -f1 -d .)"
   _patchrel="$(echo "$_abiname" | cut -f2 -d .)"
-  msg "Patching sources with lqx patch"
+  msg "Patching sources with ${_lqxpatchname}-${__basekernel}.${_minor}-${_patchrel}.patch"
   patch -Np1 -i ../${_lqxpatchname}/linux-liquorix/debian/patches/zen/${__basekernel}.${_minor}-${_patchrel}.patch
 
     # Trying oldcfg if possible and if selected
