--- a/linux-lqx-rebranded/linux-lqx/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx/PKGBUILD
@@ -90,7 +90,7 @@ prepare() {
   _minor="$(echo "$_abiname" | cut -f1 -d .)"
   _patchrel="$(echo "$_abiname" | cut -f2 -d .)"
   msg "Patching sources with ${_lqxpatchname}-${__basekernel}.${_minor}-${_patchrel}.patch"
-  patch -Np1 -i "${srcdir}/${_lqxpatchver}/linux-liquorix/debian/patches/zen/${__basekernel}.${_minor}-${_patchrel}.patch"
+  patch -Np1 -i ../${_lqxpatchver}/linux-liquorix/debian/patches/zen/${__basekernel}.${_minor}-${_patchrel}.patch
 
     # Trying oldcfg if possible and if selected
   if [ "$_config" = "old" ]; then
