--- a/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
+++ b/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
@@ -52,13 +52,12 @@ pkgbase=linux-uksm
 # pkgname=('linux-uksm' 'linux-uksm-headers' 'linux-uksm-docs')
 _major=4.17
 _srcname=linux-${_major}
-#_minor=0
-#_minorc=$((_minor+1))
-#_rcver=rc1
-#pkgver=${_major}.${_minorc}
+_minor=0
+_minorc=$((_minor+1))
+_rcver=rc1
+pkgver=${_major}.${_minorc}
 #_stable=${_major}.${_minor}
-#_stablerc=${pkgver}-${_rcver}
-pkgver=${_major}
+_stablerc=${pkgver}-${_rcver}
 pkgrel=0
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -78,8 +77,8 @@ source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.sign"
         #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.xz"
         #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.sign"
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         "${_uksm_path}/${_uksm_patch}"
          # the main kernel config files
@@ -106,8 +105,8 @@ prepare() {
         #patch -p1 -i ../patch-${_stable}
     
     ### Add patch from stable-review
-        #msg "Add patch from stable-review"  
-        #patch -p1 -i ../patch-${_stablerc}
+        msg "Add patch from stable-review"  
+        patch -p1 -i ../patch-${_stablerc}
 
     ### Disable USER_NS for non-root users by default
         msg "Disable USER_NS for non-root users by default"
@@ -379,6 +378,8 @@ for _p in ${pkgname[@]}; do
 done
 
 sha512sums=('4d9de340a26155a89ea8773131c76220cc2057f2b5d031b467b60e8b14c1842518e2d60a863d8c695f0f7640f3f18d43826201984a238dade857b6cef79837db'
+            'SKIP'
+            'ac47eedff2c52cab6bdaa576f93205ce59c48b763bceb736b73bd7f48add7b4af35f4615136e81e72e7054e78b1e38064520dd8eab51378f54a8e3e079db2c28'
             'SKIP'
             'a0f37a9b8dbd11f8ef4450b06afee0a6e5519cb5a5cd78f84896812b007ef645bcb9c733ae9817c24d1f4a4c2114258015abceb5a94c7e08d2bb00531a6f04c7'
             '30fc872a19686bd75b0cfa0614980a41d74f4cd40c9fd2c98f82ab4554ad39ccd7ddace9068f354572c1bdf14eed55c8e6d3390127c1a83ec093cf1487a31a0d'
