--- a/linux-next/linux-next-git/PKGBUILD
+++ b/linux-next/linux-next-git/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=linux-next-git
 #pkgname=("${pkgbase}")
 _srcname=linux-next
-pkgver=20180529.0.g5dfe68023df2
+pkgver=20180608.0.g8a91a2caa8c1
 pkgrel=1
 arch=('x86_64')
 url="http://www.kernel.org/"
@@ -23,7 +23,7 @@ source=( git://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next.git
          # standard config files for mkinitcpio ramdisk
         'linux.preset')
 md5sums=('SKIP'
-         '2e431b0dc8d7fc18fbd67614d32e7168'
+         '7abf6e18a471519399d3cf45f3b2c457'
          'ce6c81ad1ad1f8b333fd6077d47abdaf'
          'a85bfae59eb537b973c388ffadb281ff'
          '44a27afc12a89b2269dd22d1ec4c30f7'
