--- a/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
+++ b/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
@@ -52,18 +52,18 @@ pkgbase=linux-uksm
 # pkgname=('linux-uksm' 'linux-uksm-headers' 'linux-uksm-docs')
 _major=4.17
 _srcname=linux-${_major}
-_minor=0
+_minor=1
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
-#_stable=${_major}.${_minor}
+_stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
-pkgrel=0.1
+pkgrel=0
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
 license=('GPL2')
 options=('!strip')
-#makedepends=('kmod' 'inetutils' 'bc' 'libelf')
+makedepends=('kmod' 'inetutils' 'bc' 'libelf')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master"
@@ -75,8 +75,8 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patc
 
 source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.sign"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.xz"
-        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.sign"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/patch-${_stable}.sign"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.xz"
         "https://www.kernel.org/pub/linux/kernel/v4.x/stable-review/patch-${_stablerc}.sign"
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
@@ -102,8 +102,8 @@ prepare() {
     cd ${_srcname}
 
     ### Add upstream patch
-        #msg "Add upstream patch"
-        #patch -p1 -i ../patch-${_stable}
+        msg "Add upstream patch"
+        patch -p1 -i ../patch-${_stable}
     
     ### Add patch from stable-review
         msg "Add patch from stable-review"  
@@ -384,7 +384,9 @@ done
 
 sha512sums=('4d9de340a26155a89ea8773131c76220cc2057f2b5d031b467b60e8b14c1842518e2d60a863d8c695f0f7640f3f18d43826201984a238dade857b6cef79837db'
             'SKIP'
-            'ac47eedff2c52cab6bdaa576f93205ce59c48b763bceb736b73bd7f48add7b4af35f4615136e81e72e7054e78b1e38064520dd8eab51378f54a8e3e079db2c28'
+            '18ebb8ed8bd7b782c7e1ed057bf18260991182cbb2c20939bc31e122afdb9f4a185f3c162134f506ed608fd1f83413a29e2db8d7cee83af4c3dc1b88c892405a'
+            'SKIP'
+            '9dab0c320dae47ad380449d4f113867ebfe7099d40e238b8cb9efd0a795ef9888cc9501892d40cf9f5472e986a782b40cf9da569016490fc82bb6790c2f33c2f'
             'SKIP'
             'a0f37a9b8dbd11f8ef4450b06afee0a6e5519cb5a5cd78f84896812b007ef645bcb9c733ae9817c24d1f4a4c2114258015abceb5a94c7e08d2bb00531a6f04c7'
             '30fc872a19686bd75b0cfa0614980a41d74f4cd40c9fd2c98f82ab4554ad39ccd7ddace9068f354572c1bdf14eed55c8e6d3390127c1a83ec093cf1487a31a0d'
