--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -64,7 +64,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.17
 _srcname=linux-stable-rc
-pkgver=4.17.2.0.g3816828a8cd0
+pkgver=4.17.2.15.g894caab83aab
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -78,15 +78,17 @@ _gcc_name="kernel_gcc_patch"
 _gcc_rel='20180509'
 _gcc_path="https://github.com/graysky2/${_gcc_name}/archive"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
-_bfq_mq_ver='20180531-v2'
-_bfq_mq_patch="${_major}-bfq-sq-mq-git-${_bfq_mq_ver}.patch"
+_bfq_sq_mq_path="bfq-sq-mq"
+_bfq_sq_mq_ver='v8r12'
+_bfq_sq_mq_rel='2K180531-v3'
+_bfq_sq_mq_patch="${_major}-bfq-sq-mq-${_bfq_sq_mq_ver}-${_bfq_sq_mq_rel}.patch"
 
 source=(# mainline kernel
         "git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         # gcc cpu optimizatons from graysky and ck; forked by sir_lucjan
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         # bfq-mq patch
-        "${_lucjanpath}/${_bfq_mq_patch}"
+        "${_lucjanpath}/${_bfq_sq_mq_path}/${_bfq_sq_mq_patch}"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
          # the main kernel config files
         'config'
@@ -104,7 +106,7 @@ source=(# mainline kernel
 
 sha256sums=('SKIP'
             '226e30068ea0fecdb22f337391385701996bfbdba37cdcf0f1dbf55f1080542d'
-            '1f2b2e67b83c297e00b844f3c3708d5113f215b99bc0b2c042271818fa4f7340'
+            'ceaad5e91d47faaed8bea769fb9888caece388259beba2801ae1f4c5ac6fb256'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             'ba45644bc3feed68a8d19c77bcc9dbbb5a4acc5be98cf04cfa1ebf204bb0ddf0'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
@@ -145,16 +147,8 @@ prepare() {
         patch -Np1 -i ../0003-ACPI-watchdog-Prefer-iTCO_wdt-always-when-WDAT-table.patch
    
    ### Patch source with BFQ-SQ-MQ
-        _ver1="$(cat Makefile | grep -m1 -e PATCHLEVEL | grep -o "[[:digit:]]*")"
-        _ver2="$(cat Makefile | grep -m1 -e SUBLEVEL | grep -o "[[:digit:]]*")"
-        msg "Fix naming schema in BFQ-SQ-MQ patch"
-        sed -i -e "s|PATCHLEVEL = 16|PATCHLEVEL = ${_ver1}|g" \
-            -i -e "s|SUBLEVEL = 0|SUBLEVEL = ${_ver2}|g" \
-            -i -e "s|EXTRAVERSION = -bfq|EXTRAVERSION =|g" \
-            -i -e "s|EXTRAVERSION =-mq|EXTRAVERSION =|g"  \
-            -i -e "s|NAME = Fearless Coyote|NAME = Merciless Moray|g" ../${_bfq_mq_patch}
         msg "Patching source with BFQ-SQ-MQ patches"
-        patch -Np1 -i ../${_bfq_mq_patch}
+        patch -Np1 -i ../${_bfq_sq_mq_patch}
 
    ### Patches related to BUG_ON(entity->tree && entity->tree != &st->active) in __bfq_requeue_entity();
         if [ -n "$_use_tentative_patches" ]; then
