--- a/psi-plus-plugins-git/PKGBUILD
+++ b/psi-plus-plugins-git/PKGBUILD
@@ -17,13 +17,10 @@ license=('GPL2')
 depends=('qt5-base' 'qt5-multimedia' 'psi-plus-git' 'qt5-webengine')
 conflicts=('psi-plus-plugins' 'psi-plus-plugins-qt5-git')
 provides=("psi-plus-plugins=$pkgver" "psi-plus-plugins-qt5-git=$pkgver")
-if [ -n "$_dev_plugins" ]; then
-   makedepends=('libotr' 'tidy' 'git' 'libsignal-protocol-c')
-else
-   makedepends=('libotr' 'tidy' 'git')
-fi
+makedepends=('libotr' 'tidy' 'git' 'cmake' 'libsignal-protocol-c')
 optdepends=('libotr: for OTR plugin'
-            'tidy: for OTR plugin')
+            'tidy: for OTR plugin'
+            'libsignal-protocol-c: for omemoplugin')
 source=('git://github.com/psi-im/plugins'
         'git://github.com/psi-im/psi.git'
         'psi-plus::git://github.com/psi-plus/main.git'
