--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -68,7 +68,7 @@ pkgbase=linux-juliagoda-git
 _major=4.17
 _srcname=linux-stable-rc
 pkgver=4.17.8.0.g5606f577a707
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -85,11 +85,11 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
          # the main kernel config files
         'config'
          # pacman hook for depmod
-        'linux-01-depmod.hook'
+        '60-linux-01-depmod.hook'
          # pacman hook for initramfs regeneration
-        'linux-02-initcpio.hook'
+        '90-linux-02-initcpio.hook'
          # pacman hook for initramfs remove
-        'linux-03-remove.hook'
+        '99-linux-03-remove.hook'
          # standard config files for mkinitcpio ramdisk
         'linux.preset')
         
@@ -298,12 +298,12 @@ _package-kernel() {
         install -Dm644 /dev/stdin "${pkgdir}/etc/mkinitcpio.d/${pkgbase}.preset"
 
     # install pacman hooks
-    sed "${_subst}" ../linux-01-depmod.hook |
-        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/${pkgbase}-01-depmod.hook"
-    sed "${_subst}" ../linux-02-initcpio.hook |
-        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/${pkgbase}-02-initcpio.hook"
-    sed "${_subst}" ../linux-03-remove.hook |
-        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/${pkgbase}-03-remove.hook"    
+    sed "${_subst}" ../60-linux-01-depmod.hook |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/60-${pkgbase}-01-depmod.hook"
+    sed "${_subst}" ../90-linux-02-initcpio.hook |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/90-${pkgbase}-02-initcpio.hook"
+    sed "${_subst}" ../99-linux-03-remove.hook |
+        install -Dm644 /dev/stdin "${pkgdir}/usr/share/libalpm/hooks/99-${pkgbase}-03-remove.hook"    
 }
 
 _package-headers() {
