--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -64,6 +64,7 @@ _1k_HZ_ticks=y
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-juliagoda-git
+_pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.17
 _srcname=linux-stable-rc
@@ -74,11 +75,11 @@ url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git')
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/linux-lucjan/master/${_major}"
-_lucjanpath="https://gitlab.com/sirlucjan/linux-lucjan/raw/master/${_major}"
+_lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/${_major}"
+#_lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/${_major}"
 _lucjanver='v20180716'
 _lucjanrel='r2'
-_lucjanpatch="${_major}-linux-lucjan-${_lucjanver}${_lucjanrel}.patch"
+_lucjanpatch="${_major}-${_pkgbase}-${_lucjanver}${_lucjanrel}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_lucjanpatch}"
@@ -399,7 +400,7 @@ for _p in ${pkgname[@]}; do
 done
 
 sha512sums=('SKIP'
-            '92b160169b3dfbb9809e5f0c1ea84d067d512b3df640c77629bbfdccf21cde8a7a58ac512fcf11dd286e993b1deb65e03e3565f5b7b3fa63fe4cc9ee6b3b5b4e'
+            '565556d285e6f80f5049d391e3d7bb02938e916f709263f85cb85d1fc40a05bf12bda5ee11848d15d6e4e5ffc08fef3cecc7161ee910816a0b7c5fe5d7b785a6'
             '9baef8e9cca2450ce7d247bcfc91bb9d7971b61e8c7d7bbae338749c94682b98117fd0f87b09eed0e899ebf81629573de31233c403b99ee83da30c7d90e869da'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
