--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -69,7 +69,7 @@ _pkgbase=linux-lucjan
 _major=4.17
 _srcname=linux-stable-rc
 pkgver=4.17.8.102.g8055764ff6b0
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -77,9 +77,9 @@ options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/${_major}"
-_lucjanver='v20180716'
-_lucjanrel='r2'
-_lucjanpatch="${_major}-${_pkgbase}-${_lucjanver}${_lucjanrel}.patch"
+_lucjanname='lucjan'
+_lucjanrev='rev8'
+_lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_lucjanpatch}"
