--- a/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
@@ -278,7 +278,7 @@ _package-kernel() {
     _basekernel=${_basekernel%.*}
 
     mkdir -p "${pkgdir}"/{boot,usr/lib/modules}
-    make INSTALL_MOD_PATH="${pkgdir}/usr" modules_install
+    make INSTALL_MOD_PATH="${pkgdir}/usr" DEPMOD=/doesnt/exist modules_install
     cp arch/x86/boot/bzImage "${pkgdir}/boot/vmlinuz-${pkgbase}"
 
     # make room for external modules
